@startuml

title __API's Class Diagram__\n

  namespace com.anto.gpstrack {
    namespace api {
      class com.anto.gpstrack.api.PhoneController {
          {static} - MAGIC_NUMBER : int
          + acquireToken()
          + deleteData()
          + register()
          - isImeiValid()
      }
    }
  }
  

  namespace com.anto.gpstrack {
    namespace api {
      class com.anto.gpstrack.api.PositionController {
          + PositionController()
          + submitPosition()
      }
    }
  }
  

  namespace com.anto.gpstrack {
    namespace api {
      class com.anto.gpstrack.api.WebController {
          + getDevices()
          + getPositions()
          + login()
          + validate()
      }
    }
  }
  

  com.anto.gpstrack.api.PhoneController o-- com.anto.gpstrack.service.PhoneService : phoneService
  com.anto.gpstrack.api.PhoneController o-- com.anto.gpstrack.service.PositionService : positionService
  com.anto.gpstrack.api.PhoneController o-- com.anto.gpstrack.service.AccessTokenService : tokenService
  com.anto.gpstrack.api.PositionController o-- com.anto.gpstrack.service.PositionService : positionService
  com.anto.gpstrack.api.WebController o-- com.anto.gpstrack.service.PhoneService : phoneService
  com.anto.gpstrack.api.WebController o-- com.anto.gpstrack.service.PositionService : positionService
  com.anto.gpstrack.api.WebController o-- com.anto.gpstrack.service.AccessTokenService : tokenService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
